removed left margin from wra-col-2 to fix white space on right scroll

--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,8 @@ table {
 
 .wrap-lg {
 	margin: 0 auto;
-	max-width: 1400px;
-	min-width: 1024px;
+	max-width: 1440px;
+	min-width: 1440px;
 }
 
 .wrap-col-1 {
@@ -90,7 +90,7 @@ table {
 }
 
 .wrap-col-2 {
-	margin: 0 20px 0 820px;
+	margin:;
 	width: 700px;
 }
 
@@ -102,7 +102,7 @@ table {
 
 .bg img {
 	margin-top: 20px;
-	width: 100%
+	width: 100%;
 }
 
 .group:after {
@@ -602,7 +602,6 @@ table {
 	display: block;
 	margin: 0 auto;
 	padding-top: 10px;
-	width: 100%;
 }
 
 #footer p {
